--- a/pepeizqs deals web/Pages/Componentes/Cuenta/Cuenta.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/Cuenta.razor
@@ -138,47 +138,49 @@
         </button>
     </div>
 
-    <label style="font-size: 20px; margin-top: 40px;">@Herramientas.Idiomas.BuscarTexto(idioma, "String23", "Account")</label>
-    <hr />
+    @if (usuario.EmailConfirmed == true)
+    {
+        <label style="font-size: 20px; margin-top: 40px;">@Herramientas.Idiomas.BuscarTexto(idioma, "String23", "Account")</label>
+        <hr />
 
-    <div class="grid-estructura" style="margin-top: 20px; background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); padding: 20px;">
-        <button @onclick="@(e => MostrarNotificacionesCorreo(e))" class="boton-pestañas">
-            <div style="display: flex; align-items: center; gap: 20px; text-align: left;">
-                <i class="fa-solid fa-envelope" style="font-size: 22px;"></i>
+        <div class="grid-estructura" style="margin-top: 20px; background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); padding: 20px;">
+            <button @onclick="@(e => MostrarNotificacionesCorreo(e))" class="boton-pestañas">
+                <div style="display: flex; align-items: center; gap: 20px; text-align: left;">
+                    <i class="fa-solid fa-envelope" style="font-size: 22px;"></i>
 
-                <div>
                     <div>
-                        @Herramientas.Idiomas.BuscarTexto(idioma, "String3", "Account")
-                    </div>
+                        <div>
+                            @Herramientas.Idiomas.BuscarTexto(idioma, "String3", "Account")
+                        </div>
 
-                    <div style="margin-top: 5px; font-size: 14px;">
-                        @Herramientas.Idiomas.BuscarTexto(idioma, "String14", "Account")
+                        <div style="margin-top: 5px; font-size: 14px;">
+                            @Herramientas.Idiomas.BuscarTexto(idioma, "String14", "Account")
+                        </div>
                     </div>
                 </div>
-            </div>
-        </button>
+            </button>
 
-        <button @onclick="@(e => MostrarNotificacionesPush(e))" class="boton-pestañas">
-            <div style="display: flex; align-items: center; gap: 20px; text-align: left;">
-                <i class="fa-solid fa-bell" style="font-size: 22px;"></i>
+            <button @onclick="@(e => MostrarNotificacionesPush(e))" class="boton-pestañas">
+                <div style="display: flex; align-items: center; gap: 20px; text-align: left;">
+                    <i class="fa-solid fa-bell" style="font-size: 22px;"></i>
 
-                <div>
                     <div>
-                        @Herramientas.Idiomas.BuscarTexto(idioma, "String21", "Account")
-                    </div>
+                        <div>
+                            @Herramientas.Idiomas.BuscarTexto(idioma, "String21", "Account")
+                        </div>
 
-                    <div style="margin-top: 5px; font-size: 14px;">
-                        @Herramientas.Idiomas.BuscarTexto(idioma, "String22", "Account")
+                        <div style="margin-top: 5px; font-size: 14px;">
+                            @Herramientas.Idiomas.BuscarTexto(idioma, "String22", "Account")
+                        </div>
                     </div>
                 </div>
-            </div>
-        </button>
-    </div>
+            </button>
+        </div>
 
-    <label style="font-size: 20px; margin-top: 40px;">@Herramientas.Idiomas.BuscarTexto(idioma, "String18", "Account")</label>
-    <hr />
+        <label style="font-size: 20px; margin-top: 40px;">@Herramientas.Idiomas.BuscarTexto(idioma, "String18", "Account")</label>
+        <hr />
 
-    @*     <div class="grid-estructura" style="margin-top: 20px; background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); padding: 20px;">
+        @*     <div class="grid-estructura" style="margin-top: 20px; background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); padding: 20px;">
         <button @onclick="@(e => MostrarIsthereanydeal(e))" class="boton-pestañas">
             <div style="display: flex; align-items: center; gap: 20px; text-align: left;">
                 <img src="/imagenes/otros/itad.webp" style="max-width: 30px; max-height: 30px;" />
@@ -196,121 +198,128 @@
         </button>
     </div> *@
 
-    <div class="grid-estructura" style="margin-top: 20px; background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); padding: 20px;">
-        <button @onclick="@(e => MostrarSteam(e))" class="boton-pestañas">
-            <div style="display: flex; align-items: center; gap: 20px; text-align: left;">
-                <img src="@JuegoDRM2.SacarImagen(JuegoDRM.Steam)" style="max-width: 30px; max-height: 30px;" />
+        <div class="grid-estructura" style="margin-top: 20px; background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); padding: 20px;">
+            <button @onclick="@(e => MostrarSteam(e))" class="boton-pestañas">
+                <div style="display: flex; align-items: center; gap: 20px; text-align: left;">
+                    <img src="@JuegoDRM2.SacarImagen(JuegoDRM.Steam)" style="max-width: 30px; max-height: 30px;" />
 
-                <div style="display: flex; flex-direction: column; gap: 5px;">
-                    <div>
-                        @JuegoDRM2.DevolverDRM(JuegoDRM.Steam)
-                    </div>
-
-                    @if (string.IsNullOrEmpty(usuario.SteamAccountLastCheck) == false)
-                    {
-                        <div style="font-size: 14px;">
-                            @Herramientas.Idiomas.BuscarTexto(idioma, "String10", "AccountGames") @Herramientas.Calculadora.DiferenciaTiempo(Convert.ToDateTime(usuario.SteamAccountLastCheck), idioma)
+                    <div style="display: flex; flex-direction: column; gap: 5px;">
+                        <div>
+                            @JuegoDRM2.DevolverDRM(JuegoDRM.Steam)
                         </div>
-                    }
-                </div>
-            </div>
-        </button>
 
-        <button @onclick="@(e => MostrarGog(e))" class="boton-pestañas">
-            <div style="display: flex; align-items: center; gap: 20px; text-align: left;">
-                <img src="@JuegoDRM2.SacarImagen(JuegoDRM.GOG)" style="max-width: 30px; max-height: 30px;" />
-
-                <div style="display: flex; flex-direction: column; gap: 5px;">
-                    <div>
-                        @JuegoDRM2.DevolverDRM(JuegoDRM.GOG)
+                        @if (string.IsNullOrEmpty(usuario.SteamAccountLastCheck) == false)
+                        {
+                            <div style="font-size: 14px;">
+                                @Herramientas.Idiomas.BuscarTexto(idioma, "String10", "Account") @Herramientas.Calculadora.DiferenciaTiempo(Convert.ToDateTime(usuario.SteamAccountLastCheck), idioma)
+                            </div>
+                        }
                     </div>
-
-                    @if (usuario.GogAccountLastCheck != null)
-                    {
-                        <div style="font-size: 14px;">
-                            @Herramientas.Idiomas.BuscarTexto(idioma, "String10", "AccountGames") @Herramientas.Calculadora.DiferenciaTiempo(usuario.GogAccountLastCheck, idioma)
-                        </div>
-                    }
                 </div>
-            </div>
-        </button>
+            </button>
 
-        <button @onclick="@(e => MostrarAmazon(e))" class="boton-pestañas">
-            <div style="display: flex; align-items: center; gap: 20px; text-align: left;">
-                <img src="@JuegoDRM2.SacarImagen(JuegoDRM.Amazon)" style="max-width: 30px; max-height: 30px;" />
+            <button @onclick="@(e => MostrarGog(e))" class="boton-pestañas">
+                <div style="display: flex; align-items: center; gap: 20px; text-align: left;">
+                    <img src="@JuegoDRM2.SacarImagen(JuegoDRM.GOG)" style="max-width: 30px; max-height: 30px;" />
 
-                <div style="display: flex; flex-direction: column; gap: 5px;">
-                    <div>
-                        @JuegoDRM2.DevolverDRM(JuegoDRM.Amazon)
+                    <div style="display: flex; flex-direction: column; gap: 5px;">
+                        <div>
+                            @JuegoDRM2.DevolverDRM(JuegoDRM.GOG)
+                        </div>
+
+                        @if (usuario.GogAccountLastCheck != null)
+                        {
+                            <div style="font-size: 14px;">
+                                @Herramientas.Idiomas.BuscarTexto(idioma, "String10", "Account") @Herramientas.Calculadora.DiferenciaTiempo(usuario.GogAccountLastCheck, idioma)
+                            </div>
+                        }
                     </div>
-
-                    @if (usuario.AmazonLastImport != null)
-                    {
-                        <div style="font-size: 14px;">
-                            @Herramientas.Idiomas.BuscarTexto(idioma, "String7", "AccountGames") @Herramientas.Calculadora.DiferenciaTiempo(usuario.AmazonLastImport, idioma)
-                        </div>
-                    }
                 </div>
-            </div>
-        </button>
+            </button>
 
-        <button @onclick="@(e => MostrarEpicGames(e))" class="boton-pestañas">
-            <div style="display: flex; align-items: center; gap: 20px; text-align: left;">
-                <img src="@JuegoDRM2.SacarImagen(JuegoDRM.Epic)" style="max-width: 30px; max-height: 30px;" />
+            <button @onclick="@(e => MostrarAmazon(e))" class="boton-pestañas">
+                <div style="display: flex; align-items: center; gap: 20px; text-align: left;">
+                    <img src="@JuegoDRM2.SacarImagen(JuegoDRM.Amazon)" style="max-width: 30px; max-height: 30px;" />
 
-                <div style="display: flex; flex-direction: column; gap: 5px;">
-                    <div>
-                        @JuegoDRM2.DevolverDRM(JuegoDRM.Epic)
+                    <div style="display: flex; flex-direction: column; gap: 5px;">
+                        <div>
+                            @JuegoDRM2.DevolverDRM(JuegoDRM.Amazon)
+                        </div>
+
+                        @if (usuario.AmazonLastImport != null)
+                        {
+                            <div style="font-size: 14px;">
+                                @Herramientas.Idiomas.BuscarTexto(idioma, "String9", "Account") @Herramientas.Calculadora.DiferenciaTiempo(usuario.AmazonLastImport, idioma)
+                            </div>
+                        }
                     </div>
-
-                    @if (usuario.EpicGamesLastImport != null)
-                    {
-                        <div style="font-size: 14px;">
-                            @Herramientas.Idiomas.BuscarTexto(idioma, "String7", "AccountGames") @Herramientas.Calculadora.DiferenciaTiempo(usuario.EpicGamesLastImport, idioma)
-                        </div>
-                    }
                 </div>
-            </div>
-        </button>
+            </button>
 
-        <button @onclick="@(e => MostrarUbisoft(e))" class="boton-pestañas">
-            <div style="display: flex; align-items: center; gap: 20px; text-align: left;">
-                <img src="@JuegoDRM2.SacarImagen(JuegoDRM.Ubisoft)" style="max-width: 30px; max-height: 30px;" />
+            <button @onclick="@(e => MostrarEpicGames(e))" class="boton-pestañas">
+                <div style="display: flex; align-items: center; gap: 20px; text-align: left;">
+                    <img src="@JuegoDRM2.SacarImagen(JuegoDRM.Epic)" style="max-width: 30px; max-height: 30px;" />
 
-                <div style="display: flex; flex-direction: column; gap: 5px;">
-                    <div>
-                        @JuegoDRM2.DevolverDRM(JuegoDRM.Ubisoft)
+                    <div style="display: flex; flex-direction: column; gap: 5px;">
+                        <div>
+                            @JuegoDRM2.DevolverDRM(JuegoDRM.Epic)
+                        </div>
+
+                        @if (usuario.EpicGamesLastImport != null)
+                        {
+                            <div style="font-size: 14px;">
+                                @Herramientas.Idiomas.BuscarTexto(idioma, "String9", "Account") @Herramientas.Calculadora.DiferenciaTiempo(usuario.EpicGamesLastImport, idioma)
+                            </div>
+                        }
                     </div>
-
-                    @if (usuario.UbisoftLastImport != null)
-                    {
-                        <div style="font-size: 14px;">
-                            @Herramientas.Idiomas.BuscarTexto(idioma, "String7", "AccountGames") @Herramientas.Calculadora.DiferenciaTiempo(usuario.UbisoftLastImport, idioma)
-                        </div>
-                    }
                 </div>
-            </div>
-        </button>
+            </button>
 
-        <button @onclick="@(e => MostrarEa(e))" class="boton-pestañas">
-            <div style="display: flex; align-items: center; gap: 20px; text-align: left;">
-                <img src="@JuegoDRM2.SacarImagen(JuegoDRM.EA)" style="max-width: 30px; max-height: 30px;" />
+            <button @onclick="@(e => MostrarUbisoft(e))" class="boton-pestañas">
+                <div style="display: flex; align-items: center; gap: 20px; text-align: left;">
+                    <img src="@JuegoDRM2.SacarImagen(JuegoDRM.Ubisoft)" style="max-width: 30px; max-height: 30px;" />
 
-                <div style="display: flex; flex-direction: column; gap: 5px;">
-                    <div>
-                        @JuegoDRM2.DevolverDRM(JuegoDRM.EA)
+                    <div style="display: flex; flex-direction: column; gap: 5px;">
+                        <div>
+                            @JuegoDRM2.DevolverDRM(JuegoDRM.Ubisoft)
+                        </div>
+
+                        @if (usuario.UbisoftLastImport != null)
+                        {
+                            <div style="font-size: 14px;">
+                                @Herramientas.Idiomas.BuscarTexto(idioma, "String9", "Account") @Herramientas.Calculadora.DiferenciaTiempo(usuario.UbisoftLastImport, idioma)
+                            </div>
+                        }
                     </div>
-
-                    @if (usuario.EaLastImport != null)
-                    {
-                        <div style="font-size: 14px;">
-                            @Herramientas.Idiomas.BuscarTexto(idioma, "String7", "AccountGames") @Herramientas.Calculadora.DiferenciaTiempo(usuario.EaLastImport, idioma)
-                        </div>
-                    }
                 </div>
-            </div>
-        </button>
-    </div>
+            </button>
+
+            <button @onclick="@(e => MostrarEa(e))" class="boton-pestañas">
+                <div style="display: flex; align-items: center; gap: 20px; text-align: left;">
+                    <img src="@JuegoDRM2.SacarImagen(JuegoDRM.EA)" style="max-width: 30px; max-height: 30px;" />
+
+                    <div style="display: flex; flex-direction: column; gap: 5px;">
+                        <div>
+                            @JuegoDRM2.DevolverDRM(JuegoDRM.EA)
+                        </div>
+
+                        @if (usuario.EaLastImport != null)
+                        {
+                            <div style="font-size: 14px;">
+                                @Herramientas.Idiomas.BuscarTexto(idioma, "String9", "Account") @Herramientas.Calculadora.DiferenciaTiempo(usuario.EaLastImport, idioma)
+                            </div>
+                        }
+                    </div>
+                </div>
+            </button>
+        </div>
+    }
+    else
+    {
+        <div style="margin-top: 40px;">
+            @Herramientas.Idiomas.BuscarTexto(idioma, "String11", "Account")
+        </div>
+    }
 </div>
 
 @if (enseñarPestaña == true)
