--- a/pepeizqs deals web/Pages/Componentes/Cuenta/Juegos/Amazon.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/Juegos/Amazon.razor
@@ -431,90 +431,7 @@
         if (e.File.Name.ToLower().Contains("gameuserinteractionsinfo") == true)
         {
             importados = 0;
-
-            IBrowserFile fichero = e.File;
-            int maximoTamaño = 268435456; //256 mb;
-            byte[] buffer = new byte[fichero.Size];
-
-            Herramientas.Ficheros.LecturaPerezosa stream = new Herramientas.Ficheros.LecturaPerezosa(fichero, maximoTamaño);
-            StreamContent contenido = new StreamContent(stream);
-
-            string ubicacion = Path.GetFullPath("./wwwroot/otros/amazon-" + usuario.Id + ".sqlite");
-            await File.WriteAllBytesAsync(ubicacion, await contenido.ReadAsByteArrayAsync());
-
-            List<string> listadoIds = new List<string>();
-
-            using (SqliteConnection conexion = new SqliteConnection("Data Source=" + ubicacion))
-            {
-                conexion.Open();
-
-                SqliteCommand comando = conexion.CreateCommand();
-                comando.CommandText = "SELECT * FROM dbset";
-
-                using (SqliteDataReader lector = comando.ExecuteReader())
-                {
-                    while (lector.Read())
-                    {
-                        if (lector.IsDBNull(0) == false)
-                        {
-                            if (string.IsNullOrEmpty(lector.GetString(0)) == false)
-                            {
-                                listadoIds.Add(lector.GetString(0));
-                            }
-                        }
-                    }
-                }
-            }
-
-            if (listadoIds.Count > 0)
-            {
-                SqlConnection conexion = new SqlConnection();
-
-                if (conexion == null)
-                {
-                    conexion = Herramientas.BaseDatos.Conectar();
-                }
-                else
-                {
-                    if (conexion.State != System.Data.ConnectionState.Open)
-                    {
-                        conexion = Herramientas.BaseDatos.Conectar();
-                    }
-                }
-
-                string textoIds = string.Empty;
-
-                foreach (string id in listadoIds)
-                {
-                    BaseDatos.Plataformas.Buscar.Amazon(id, null, conexion);
-
-                    if (string.IsNullOrEmpty(textoIds) == true)
-                    {
-                        textoIds = id;
-                    }
-                    else
-                    {
-                        textoIds = textoIds + "," + id;
-                    }
-
-                    importados += 1;
-                }
-
-                if (usuario != null)
-                {
-                    usuario.AmazonGames = textoIds;
-                    usuario.AmazonLastImport = DateTime.Now;
-
-                    try
-                    {
-                        await UserManager.UpdateAsync(usuario);
-                    }
-                    catch
-                    {
-                        BaseDatos.Errores.Insertar.Mensaje("Cuenta Amazon Juegos", usuario.Id);
-                    }
-                }
-            }
+            importados = await Herramientas.Ficheros.Amazon.Cargar(e.File, usuario, UserManager);
         }
 
         trabajando = false;
