--- a/pepeizqs deals web/Pages/Componentes/Cuenta/Juegos/Ea.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/Juegos/Ea.razor
@@ -93,7 +93,7 @@
                 @if (trabajando == false)
                 {
                     <div style="display: flex; align-items: center; gap: 20px;">
-                        <button @onclick="@(e => MostrarGogGalaxy(e))" title="GOG Galaxy" class="boton-pestañas" style="font-size: 16px; padding: 0px; width: fit-content; height: 60px;">
+                       @*  <button @onclick="@(e => MostrarGogGalaxy(e))" title="GOG Galaxy" class="boton-pestañas" style="font-size: 16px; padding: 0px; width: fit-content; height: 60px;">
                             <div>
                                 <div style="display: flex; align-items: center; gap: 15px; justify-content: center; padding: 15px 20px;">
                                     <img src="/imagenes/otros/goggalaxy.webp" style="max-width: 30px; max-height: 30px;" />
@@ -111,7 +111,7 @@
                                     <div style="border: 1px solid var(--colorTexto);"/>
                                 }
                             </div>
-                        </button>
+                        </button> *@
 
                         <button @onclick="@(e => MostrarPlaynite(e))" title="Playnite" class="boton-pestañas" style="font-size: 16px; padding: 0px; width: fit-content; height: 60px;">
                             <div>
