--- a/pepeizqs deals web/Pages/Componentes/Cuenta/Juegos/Gog.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/Juegos/Gog.razor
@@ -97,7 +97,7 @@
 
 				@if (ocupado == false)
 				{
-					<input class="entrada-texto" placeholder="@Herramientas.Idiomas.BuscarTexto(idioma, "String6", "AccountGames")" value="@usuario.GogAccount" @oninput="TextoCambiaGogCuenta" />
+					<input class="entrada-texto" placeholder="https://www.gog.com/u/[@Herramientas.Idiomas.BuscarTexto(idioma, "String1", "AccountGames")]" value="@usuario.GogAccount" @oninput="TextoCambiaGogCuenta" />
 				}
 				else
 				{
