--- a/pepeizqs deals web/Pages/Componentes/Interfaz/Cabecera.razor
+++ b/pepeizqs deals web/Pages/Componentes/Interfaz/Cabecera.razor
@@ -79,7 +79,11 @@
     @if (enseñarBuscador == false)
     {
         <button class="texto-cabecera boton-superior" @onclick="@(e => MostrarBuscador(e))" style="cursor: pointer; border: 0px;">
-            <i class="fa-solid fa-magnifying-glass"></i>
+            <div style="max-width: 16px; max-height: 16px;">
+                <svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z" />
+                </svg>
+            </div>
         </button>
 
         <div class="botones-superiores">
@@ -124,7 +128,11 @@
 
         <div class="botones-superiores2" style="cursor: pointer;">
             <div class="menu-dropdown">
-                <i class="fa-solid fa-bars"></i>
+                <div style="max-width: 16px; max-height: 16px;">
+                    <svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                        <path d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z" />
+                    </svg>
+                </div>
 
                 <div class="menu-dropdown-contenido">
                     @if (usuario != null)
@@ -171,7 +179,11 @@
     else
     {
         <button class="texto-cabecera boton-superior" @onclick="@(e => MostrarBuscador(e))" style="cursor: pointer; border: 0px; background-color: transparent;">
-            <i class="fa-solid fa-magnifying-glass"></i>
+            <div style="max-width: 16px; max-height: 16px;">
+                <svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z" />
+                </svg>
+            </div>
         </button>
 
         <input type="text" @oninput="TextoCambiaBuscador" @onblur="AdiosFocusBuscador" class="entrada-texto" style="min-width: 50px; max-width: 400px;" placeholder="@Herramientas.Idiomas.BuscarTexto(idioma, "SearchPlaceholder", "Header")" />
@@ -419,7 +431,11 @@
                     </div>
                 }
 
-                <i class="fa-solid fa-caret-down"></i>
+                <div style="max-width: 16px; max-height: 16px;">
+                    <svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                        <path d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z" />
+                    </svg>
+                </div>
             </div>
 
             <div class="menu-dropdown-contenido" style="right: -10px;">
