--- a/pepeizqs deals web/Pages/Componentes/Cuenta/Cuenta.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/Cuenta.razor
@@ -325,12 +325,16 @@
 @if (enseñarPestaña == true)
 {
     <div class="opciones-panel">
-        <div style="display: flex; align-items: start; margin: auto; justify-content: center; max-height: 100vh; min-width: 100vh; max-width: 1000px; background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); padding: 40px; overflow-y: scroll; scrollbar-color: var(--fondoCodigo) var(--fondoOscuro);">
-            <button style="color: var(--colorTextoVisitado); background-color: var(--fondoBotonPequeño); border: 0px; padding: 8px 15px;" @onclick="ClickearCerrarPestaña">
-                <i class="fa-solid fa-arrow-left" style="font-size: 25px;"></i>
+        <div style="display: flex; align-items: start; gap: 40px; margin: auto; justify-content: center; max-height: 100vh; min-width: 100vh; max-width: 1000px; background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); padding: 40px; overflow-y: scroll; scrollbar-color: var(--fondoCodigo) var(--fondoOscuro);">
+            <button style="color: var(--colorTextoVisitado); background-color: var(--fondoBotonPequeño); border: 0px; width: fit-content; padding: 10px 15px;" @onclick="ClickearCerrarPestaña">
+                <div style="max-width: 24px; max-height: 24px;">
+                    <svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                        <path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z" />
+                    </svg>
+                </div>
             </button>
 
-            <div style="width: 100%; margin-left: 40px;">
+            <div style="width: 100%;">
                 @if (mostrarCorreo == true)
                 {
                     <Correo idioma="@idioma" />
