--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -304,9 +304,11 @@
 	@if (noticiasSemana.Count > 0)
 	{
 		<div title="@Herramientas.Idiomas.BuscarTexto(idioma, "String2", "Index")">
-			<button class="boton-pequeño" @onclick="CerrarNoticiasSemana" style="padding: 0px; width: fit-content; font-size: 20px; background-color: transparent;">
-				<div>
-					<i class="fa-solid fa-xmark"></i>
+			<button class="boton-pequeño" @onclick="CerrarNoticiasSemana" style="padding: 0px; width: fit-content; background-color: transparent;">
+				<div style="max-width: 22px; max-height: 22px;">
+					<svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+						<path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z" />
+					</svg>
 				</div>
 			</button>
 
@@ -338,11 +340,16 @@
 {
 	<div style="max-width: 1000px; margin: auto;">
 		<div style="display: flex; font-size: 20px; align-items: center; justify-content: center;">
-			<div style="display: flex; align-items: center; justify-content: center; width: 100%;">
+			<div style="display: flex; align-items: center; gap: 20px; justify-content: center; width: 100%;">
 				<a href="/historical-lows" style="text-decoration: none; color: var(--colorEnlace);">@Herramientas.Idiomas.BuscarTexto(idioma, "String6", "Index")</a>
 
-				<div class="tooltip2" style="margin-left: 20px;">
-					<i class="fa-solid fa-circle-info" style="font-size: 15px;"></i>
+				<div class="tooltip2">
+					<div style="max-width: 16px; max-height: 16px;">
+						<svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+							<path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z" />
+						</svg>
+					</div>
+
 					<div class="tooltip-abrir tooltip-derecha" style="padding: 20px; min-width: 400px; max-width: 600px;">
 						@Herramientas.Idiomas.BuscarTexto(idioma, "String7", "Index")
 					</div>
@@ -417,9 +424,13 @@
 {
 	<div class="opciones-panel">
 		<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); max-width: 800px; padding: 30px; margin: 20px auto; overflow-y: scroll; padding-right: 20px; scrollbar-color: var(--fondoCodigo) var(--fondoOscuro);">
-			<div style="display: flex; align-items: center;">
-				<button class="boton-pequeño" @onclick="OcultarFiltrado" style="width: auto; padding: 5px 15px; margin-right: 20px; border: 0px; color: var(--colorTextoVisitado); font-size: 22px;">
-					<i class="fa-solid fa-arrow-left"></i>
+			<div style="display: flex; align-items: center; gap: 20px;">
+				<button class="boton-pequeño" @onclick="OcultarFiltrado" style="width: fit-content; padding: 10px 15px;">
+					<div style="max-width: 24px; max-height: 24px;">
+						<svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+							<path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z" />
+						</svg>
+					</div>
 				</button>
 
 				<div style="font-size: 20px;">
