--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -154,12 +154,7 @@
 
     <title>@titulo</title>
 
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/maestro.css" asp-append-version="true" type="text/css" />
-    <link rel="stylesheet" href="~/css/cabecera_cuerpo_pie.css" asp-append-version="true" type="text/css" />
-    <link rel="stylesheet" href="~/css/resto.css" asp-append-version="true" type="text/css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" type="text/css" />
-    <link rel="stylesheet" href="~/lib/font-awesome/css/all.css" type="text/css" />
+    <link rel="stylesheet" href="~/css/bundle.css" type="text/css" />
 
     <link rel="apple-touch-icon" sizes="152x152" href="/favicons/apple-icon-152x152.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-icon-180x180.png" />
@@ -241,7 +236,17 @@
                     
                     <div style="font-size: 16px; margin-top: 30px; display: flex; align-items: start;">
                         <div style="display: flex; flex-direction: column; gap: 5px; width: 100%;">
-                            <a href="@codigoFuente" target="_blank" style="text-decoration: none;"><i class="fa-brands fa-github" style="font-size: 20px; margin-right: 10px;"></i>@Herramientas.Idiomas.BuscarTexto(idioma, "SourceCode", "Footer")</a>
+                            <a href="@codigoFuente" target="_blank" style="text-decoration: none;">
+                                <div style="display: flex; align-items: center; gap: 10px;">
+                                    <svg style="width: 22px; height: 22px; fill: var(--colorEnlace);" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
+                                        <path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z" />
+                                    </svg>
+                                
+                                    <div>
+                                        @Herramientas.Idiomas.BuscarTexto(idioma, "SourceCode", "Footer")
+                                    </div>
+                                </div>
+                            </a>
                             <a href="/contact" style="text-decoration: none;">@Herramientas.Idiomas.BuscarTexto(idioma, "Contact", "Footer")</a>
                             <a href="/privacy" style="text-decoration: none;">@Herramientas.Idiomas.BuscarTexto(idioma, "Privacy", "Footer")</a>
                             <a href="@visitas" style="text-decoration: none;" target="_blank">@Herramientas.Idiomas.BuscarTexto(idioma, "Visits", "Footer")</a>
@@ -264,17 +269,21 @@
                 </div>
 
                 <div>
-                    <a onclick="moverScroll('cuerpazo')" style="color: var(--colorTextoOscuro); text-decoration: none; cursor: pointer;">
-                        <i class="fa-solid fa-chevron-up subir-arriba" style="font-size: 22px;"></i>
+                    <a onclick="moverScroll('cuerpazo')" style="text-decoration: none; cursor: pointer;">
+                        <div class="subir-arriba" style="max-width: 40px; max-height: 40px;">
+                            <svg class="svg-icono" style="fill: var(--colorTextoOscuro);" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z" /></svg>
+                        </div>
                     </a>
                 </div>
             </div>          
         </div>
     </footer>
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/superjs.js"></script>
+
+@*     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script> *@
 
     <script src="_framework/blazor.server.js" autostart="false"></script>
 
@@ -360,7 +369,7 @@
         };
     </script>
 
-    <script src="~/pushNotifications.js"></script>
+ @*    <script src="~/pushNotifications.js"></script> *@
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 
     <div id="components-reconnect-modal" style="display: none"/>
